fix: product read more button alignment

--- a/packages/client/src/assets/scss/components/_our-products.scss
+++ b/packages/client/src/assets/scss/components/_our-products.scss
@@ -59,7 +59,7 @@
             font-size: 12px;
             margin-top: 1rem;
           }
-          .btn {
+          .shedule-btn {
             margin-bottom: 1rem;
           }
         }
